# honcho

./: .dockerignore  .env.example  .env.template  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DIA_Framework_Architecture.md  Dockerfile  Dockerfile.dashboard  INTEGRATION.md  LICENSE  README.md  agentic_fde.md  alembic.ini  cache.py  chain.py  chatbot.py  config.toml  config.toml.example  dashboard-backend.py  dashboard-new.html  dashboard.html  docker-compose-rs.yml.example  docker-compose.local-embeddings.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.example  flake.nix  fly-prod.toml  fly.toml  init.2340073612492328463.zsh  litellm-config.yaml  main.py  mediator.py  (+26 more)
api/: .dockerignore  .env.template  CHANGELOG.md  Dockerfile  abcs.py  chain.py  docker-compose.yml.example  fly.toml  main.py  mediator.py  pyproject.toml
api-rs/: Cargo.toml  Dockerfile
api-rs/migrations/: 0001_initial_schema.sql  README.md
api-rs/src/: app.rs  auth.rs  cache.rs  config.rs  db.rs  dialectic.rs  dialectic_agent.rs  dialectic_config.rs  dialectic_prompt_body.txt  embedding.rs  error.rs  files.rs  filters.rs  json_parser.rs  lib.rs  main.rs  pagination.rs  producer.rs  queue_status.rs  representation.rs  representation_manager.rs  search.rs  structured_output.rs  summarizer.rs  text.rs  tokens.rs
api-rs/src/deriver/: consumer.rs  deriver.rs  mod.rs  payload.rs  poll.rs  prompts.rs  queue_manager.rs  settings.rs
api-rs/src/dreamer/: executor.rs  handlers.rs  mod.rs  orchestrator.rs  scheduler.rs  specialists.rs  tools.rs
api-rs/src/json_repair/: array.rs  battery.json  boolean_null.rs  comment.rs  context.rs  llm_block.rs  mod.rs  number.rs  object.rs  object_comparer.rs  parenthesized.rs  parser.rs  string.rs  string_helpers.rs
api-rs/src/llm/: conversation.rs  credentials.rs  executor.rs  history_adapters.rs  http.rs  mod.rs  request_builder.rs  runtime.rs  streaming.rs  tool_loop.rs  types.rs
api-rs/src/reconciler/: mod.rs  scheduler.rs
api-rs/src/telemetry/: events.rs  mod.rs
api-rs/src/webhooks/: mod.rs
api-rs/tests/: contracts.rs  db.rs  http.rs
api-rs/tests/fixtures/: dialectic_prompts.json  schema.sql
api/api/: crud.py  main.py  models.py
api/local/: docker-compose.yml
api/prompts/: thought_revision.yaml  voe.yaml
api/src/: agent.py  crud.py  db.py  dependencies.py  deriver.py  harvester.py  main.py  models.py  schemas.py  security.py
api/src/prompts/: check_dup_facts.yaml  derive_facts.yaml
api/src/routers/: apps.py  collections.py  documents.py  messages.py  metamessages.py  sessions.py  users.py
example/bloom-voe/: .env.template  cli.py  discord_bot.py  pyproject.toml  user_model_bloom-voe-cli.pkl  user_model_discord_342772778899996710.pkl
example/bloom-voe-cli/: pyproject.toml
example/bloom_user_model/: main.py  paragraph_user_model.py  pyproject.toml
example/cli/: main.py  pyproject.toml
example/discord/: main.py  pyproject.toml
example/discord/fake-llm/: main.py  pyproject.toml
example/discord/honcho-dspy-personas/: .gitignore  bot.py  chain.py  graph.py  metric.py  pyproject.toml  response_metric.py
example/discord/honcho-fact-memory/: README.md  bot.py  chain.py  pyproject.toml
example/discord/simple-roast-bot/: .env.template  README.md  main.py  pyproject.toml
examples/agno/python/: .env.template  README.md  main.py  pyproject.toml
examples/crewai/python/: README.md  main.py  pyproject.toml
examples/google-adk/python/: main.py  pyproject.toml
examples/langgraph/python/: main.py  pyproject.toml
examples/llamaindex/python/: main.py  pyproject.toml
examples/openai-agents/python/: main.py  pyproject.toml
examples/pydantic-ai/python/: main.py  pyproject.toml
examples/smolagents/python/: main.py  pyproject.toml
examples/zo/: DISPLAY.json  README.md  SKILL.md  pyproject.toml
examples/zo/scripts/: memory.py
examples/zo/tests/: test_basic.py  test_tools.py
examples/zo/tools/: __init__.py  client.py  get_context.py  query_memory.py  save_memory.py
honcho-cli/: CHANGELOG.md  README.md  pyproject.toml
honcho-cli/scripts/: generate_cli_docs.py
honcho-cli/src/honcho_cli/: __init__.py  _help.py  branding.py  common.py  config.py  main.py  oauth.py  output.py  validation.py
honcho-cli/src/honcho_tui/: __init__.py  app.py  client.py  theme.py
honcho-cli/tests/: conftest.py  test_commands.py  test_common.py  test_config.py  test_oauth.py  test_output.py  test_validation.py
mcp/: .dev.vars.example  .gitignore  Dockerfile  README.md  instructions.md  package-lock.json  package.json  pyproject.toml  run-mocked.ts  server.js  server.py  tsconfig.json  worker.ts  wrangler.toml
mcp-rs/: Cargo.toml  Dockerfile  README.md
mcp-rs/src/: config.rs  honcho_client.rs  lib.rs  main.rs  mcp_server.rs
mcp-rs/src/tools/: conclusions.rs  mod.rs  peers.rs  sessions.rs  system.rs  workspace.rs
mcp-rs/tests/: contract.rs
mcp/cloudflare-worker/: .gitignore  README.md  package-lock.json  package.json  worker.ts  wrangler.toml
mcp/src/: config.ts  index.ts  instructions.d.ts  server.ts  standalone.ts  types.ts
mcp/src/tools/: aws-status.pbt.test.ts  aws-status.test.ts  aws-status.ts  bespoke.ts  conclusions.ts  (+4 more)
metacognition-sdk/: README.md  pyproject.toml
metacognition-sdk/metacognition_sdk/: __init__.py  chain.py  interfaces.py  manager.py  messages.py  steps.py  user_model.py
sdk/: CHANGELOG.md  README.md  main.py  pyproject.toml
sdk/docs/: conf.py  index.rst
sdk/honcho/: __init__.py  cache.py  client.py  schemas.py  sync_client.py  syncclient.py  user_model.py
sdk/tests/: test_async.py  test_honcho.py  test_sync.py
sdks/python/: .gitignore  CHANGELOG.md  README.md  honcho_core-1.5.1-py3-none-any.whl  honcho_core-1.6.0-py3-none-any.whl  pyproject.toml
sdks/rust/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
worker-rs/: Cargo.toml  Dockerfile
worker-rs/src/: config.rs  consumer.rs  lib.rs  main.rs  queue.rs
worker-rs/tests/: queue.rs
(+2073 files in other folders)
