[project]
name = "honcho-cli"
version = "0.1.0"
description = "Agent-first admin & debugging CLI for Honcho"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.15.0",
    "honcho-ai>=0.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
honcho = "honcho_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honcho_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
