[package]
name = "honcho-mcp-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "honcho-mcp-rs"
path = "src/main.rs"

[dependencies]
axum = "0.8"
http = "1"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rmcp = { version = "1.6.0", features = ["server", "transport-streamable-http-server", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
