[project]
name = "honcho-mcp"
version = "1.0.0"
description = "Official Honcho MCP Server"
dynamic = ["readme"]
license = "Apache-2.0"
authors = [
{ name = "Plastic Labs", email = "hello@plasticlabs.ai" },
]
dependencies = [
    "honcho-ai>=1.1.0",
    "fastmcp>=2.10.4",
]
requires-python = ">= 3.10"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/plastic-labs/honcho"
Repository = "https://github.com/plastic-labs/honcho"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true