[tool.poetry]
name = "honcho-ai"
version = "0.0.6"
description = "Python Client SDK for Honcho"
authors = ["Plastic Labs <hello@plasticlabs.ai>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "honcho"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.26.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
coverage = "^7.4.3"
interrogate = "^1.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
furo = "^2024.1.29"

[tool.ruff.lint]
# from https://docs.astral.sh/ruff/linter/#rule-selection example
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "S", # flake8-bandit
    "I", # isort
    "RUF", # ruff
]
ignore = [
  "UP007", # https://docs.astral.sh/ruff/rules/non-pep604-annotation/
  "E501", # line too long
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
