[package]
name = "honcho-worker-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "honcho-worker-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
