[tool.poetry]
name = "honcho-cli-example"
version = "0.1.0"
description = ""
authors = ["Vineeth Voruganti <13438633+VVoruganti@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
honcho-ai = {path = "../../sdk/dist/honcho_ai-0.0.1-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
langchain = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
