[project]
name = "honcho-zo-skill"
version = "0.1.0"
description = "Honcho persistent memory skill for Zo Computer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "honcho-ai>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
