[tool.poetry]
name = "honcho-dspy-personas"
version = "0.1.0"
description = ""
authors = ["vintro <vince@plasticlabs.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dspy-ai = "^2.1.10"
python-dotenv = "^1.0.1"
langchain-core = "^0.1.23"
langchain-openai = "^0.0.6"
py-cord = "^2.4.1"
langsmith = "^0.1.3"
honcho-ai = "^0.0.4" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
