[project]
name = "honcho-crewai"
version = "0.3.0"
description = "CrewAI integration with Honcho for persistent agent memory"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Plastic Labs", email = "hello@plasticlabs.ai"}
]
maintainers = [
    {name = "Plastic Labs", email = "hello@plasticlabs.ai"}
]
keywords = [
    "honcho",
    "crewai",
    "ai-agents",
    "memory",
    "agent-memory",
    "persistent-memory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pydantic",
]
dependencies = [
    "crewai>=1.14.3,<2.0.0",
    "honcho-ai>=2.1.1,<3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://honcho.dev"
Documentation = "https://docs.honcho.dev/v3/guides/integrations/crewai"
Repository = "https://github.com/plastic-labs/honcho"
"Bug Tracker" = "https://github.com/plastic-labs/honcho/issues"
Changelog = "https://github.com/plastic-labs/honcho/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
