[project]
name = "honcho-google-adk-example"
version = "1.0.0"
description = "Google ADK integration with Honcho for persistent memory"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "honcho-ai>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
