[project]
name = "honcho-langgraph-example"
version = "0.1.0"
description = "LangGraph integration with Honcho for stateful conversational AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "honcho-ai>=2.0.0",
    "langchain-core>=1.0.6",
    "langgraph>=1.0.3",
    "openai>=1.99.7",
    "python-dotenv>=1.1.1",
]
