[project]
name = "honcho-llamaindex-example"
version = "1.0.0"
description = "LlamaIndex integration with Honcho for persistent memory"
requires-python = ">=3.10"
dependencies = [
    "llama-index>=0.12.0",
    "llama-index-llms-openai>=0.4.0",
    "honcho-ai>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
