[project]
name = "honcho-openai-agents"
version = "0.1.0"
description = "Honcho persistent memory integration for the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "honcho-ai>=2.1.0",
    "openai-agents>=0.0.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
